--- a/scss/layout/_menu.scss
+++ b/scss/layout/_menu.scss
@@ -59,6 +59,55 @@
 			width: 100%;
 			border: 0.09px solid $carbon_grey;
 		}
+
+		&--one{
+			&:hover{
+				color: $mikado_yellow;
+			}
+			
+		}
+
+		&--two{
+			&:hover{
+				color: $mikado_yellow;
+			}
+			
+		}
+
+		&--three{
+			&:hover{
+				color: $mikado_yellow;
+			}
+			
+		}
+
+		&--four{
+			&:hover{
+				color: $mikado_yellow;
+			}
+			
+		}
+
+		&--five{
+			&:hover{
+				color: $mikado_yellow;
+			}
+			
+		}
+
+		&--six{
+			&:hover{
+				color: $mikado_yellow;
+			}
+			
+		}
+
+		&--seven{
+			&:hover{
+				color: $mikado_yellow;
+			}
+			
+		}
 	}
 
 }
