--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,165 +1,26 @@
 .footer{
 	width: 100%;
-	/*background-color: $heavy_metal;*/
-	padding: 30px 0;
+	background-color:#1f1f1f ;
+	padding: 10px 0;
 	position: absolute;
 
 
 	@media(min-width:1199px){
-		padding: 60px 0;
+		padding: 15px 0;
 		
 	}
 
-
-	&__contact{
-	
-		h1{
-			letter-spacing: -0.05em;
-			color: $candlelight;
-			line-height: 0.8em;
-			text-align: center;
-			font-size: 34px;
-
-			@media(min-width:1199px){
-				font-size: 92px;
-			}
-		}
-		h2{
-			line-height: 1em;
-			text-align: center;
-			font-size: 12px;
-			color: $white;
-			font-weight: normal;
-			padding-top: 10px;
-			font-family: helvetica-w01-roman,helvetica-w02-roman,helvetica-lt-w10-roman,sans-serif;
-
-			@media(min-width:1199px){
-				font-size: 22px;
-				padding-top: 46px;
-			}
-		}
-
-		&__phone{
-			margin: auto;
-			display: grid;
-			grid-template-columns: repeat(1, 1fr);
-			gap: 20px;
-			padding: 20px 0;
-
-			@media(min-width:1199px){
-				grid-template-columns: repeat(3, 1fr);
-				width: 60%;
-				padding: 40px 0;
-				gap: 10px;
-			}
-
-			&__item{
-				@include flex-a-center;
-				gap: 20px;
-				color:$white;
-				font-size: 15px;
-				text-decoration: underline;
-
-				@media(min-width:1199px){
-					font-size: 16px;
-					gap: 10px;
-				}
-
-				&__icon{
-					width: 25px;
-
-					svg{
-						width: 100%;
-					}
-				}
-			}
-
-		}
-
-		&__email_location{
-			width: 100%;
-			margin: auto;
-			@include flex-j-between;
-			flex-direction: column;
-			gap: 20px;
-			padding-bottom: 60px;
-
-			@media(min-width:1199px){
-				width: 60%;
-				flex-direction: row;
-				gap: 30px;
-			}
-
-			&__item{
-				@include flex-a-center;
-				gap:10px;
-				color: $white;
-				text-decoration: underline;
-				font-size: 15px;
-
-				@media(min-width:1199px){
-					font-size: 21px;
-				}
-
-				&__icon{
-					width: 25px;
-
-					svg{
-						width: 100%;
-					}
-
-				}
-			}
-
-
-		}
-
-	}
-
-	hr{
-		border: 1px solid $carbon_grey;
-	}
-
-	&__information{
-		width: 100%;
-		display: flex;
+	h1{
+		letter-spacing: -0.05em;
+		color: $mikado_yellow;
+		line-height: 0.8em;
 		text-align: center;
-		flex-direction: column;
-		padding-top: 46px;
+		font-size: 15px;
+		font-weight: normal;
 
 		@media(min-width:1199px){
-			gap: 20px;
-			
+			font-size: 17px;
 		}
-
-		&__legal{
-			@include flex-center-center;
-			flex-direction: column;
-			gap: 10px;
-			color: #fff;
-			font-size: 18px;
-
-			@media(min-width:1199px){
-				gap: 20px;
-				flex-direction: row;
-			}
-			
-			a{
-				color: #fff;
-				text-decoration: underline;
-			}
-
-		}
-
-		p.text{
-			color: #fff;
-			font-size: 9px;
-			padding-top: 20px;
-
-		}
-
-		
 	}
-
 
 }
