--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -139,7 +139,7 @@
 			}
 
 			&--one{		
-				color:$black;
+				color:$white;
 				hr{
 					display: none;
 				}
@@ -160,7 +160,7 @@
 			}
 
 			&--two{
-				color:$black;
+				color:$white;
 				hr{
 					display: none;
 				}
@@ -181,7 +181,7 @@
 			}
 
 			&--three{
-				color:$black;
+				color:$white;
 				hr{
 					display: none;
 				}
@@ -202,7 +202,7 @@
 			}
 
 			&--four{
-				color:$black;
+				color:$white;
 				hr{
 					display: none;
 				}
@@ -223,7 +223,7 @@
 			}
 
 			&--five{
-				color:$black;
+				color:$white;
 				hr{
 					display: none;
 				}
@@ -244,7 +244,7 @@
 			}
 
 			&--six{
-				color:$black;
+				color:$white;
 				hr{
 					display: none;
 				}
@@ -265,7 +265,7 @@
 			}
 
 			&--seven{
-				color:$black;
+				color:$white;
 				hr{
 					display: none;
 				}
