--- a/scss/globals/_colors.scss
+++ b/scss/globals/_colors.scss
@@ -3,7 +3,7 @@ $white: #FFFFFF;
 
 /*$heavy_metal:#2F2E2E;*/
 
-
+$la_salle_green:#1B8233;
 $mikado_yellow:#F7C50A;
 $saffron_mango:#E1CB5E;
 $candlelight:#FFDA1F;
