--- a/css/main.css
+++ b/css/main.css
@@ -347,15 +347,15 @@
     font-size: 12px;
     color: #000000; }
 
-.experts {
+.hero {
   width: 100%;
   overflow: hidden;
   position: relative;
   height: 500px; }
   @media (min-width: 1199px) {
-    .experts {
+    .hero {
       height: 800px; } }
-  .experts--prev {
+  .hero--prev {
     position: absolute;
     left: 15px;
     top: 50%;
@@ -363,11 +363,11 @@
     height: 45px;
     border-radius: 50%;
     z-index: 2; }
-    .experts--prev svg {
+    .hero--prev svg {
       width: 40px;
       fill: white;
       opacity: 0.5; }
-  .experts--next {
+  .hero--next {
     position: absolute;
     right: 15px;
     top: 50%;
@@ -375,87 +375,138 @@
     height: 45px;
     border-radius: 50%;
     z-index: 2; }
-    .experts--next svg {
+    .hero--next svg {
       width: 40px;
       fill: white;
       opacity: 0.5; }
-  .experts__form {
+  .hero__form {
     width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center; }
-    .experts__form--video {
-      flex-direction: column; }
-      .experts__form--video video {
-        width: 100%;
-        height: 100%;
-        position: relative;
-        filter: brightness(60%);
-        z-index: -1;
-        object-fit: cover; }
-      .experts__form--video h1 {
-        width: 70%;
-        position: absolute;
-        font-size: 15px;
-        color: #FFFFFF;
-        text-align: center; }
+    height: 100%; }
+    .hero__form--one {
+      background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../../../img/Banner.jpg");
+      background-position: center;
+      background-size: cover;
+      background-repeat: no-repeat; }
+      .hero__form--one .container-sm {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        padding: 200px 0; }
         @media (min-width: 1199px) {
-          .experts__form--video h1 {
-            font-size: 44px;
-            margin: auto;
-            line-height: 56px;
-            text-shadow: 2px 2px 2px #000; } }
-      .experts__form--video span {
-        color: #F7C50A; }
-    .experts__form__button {
-      position: absolute;
-      bottom: 26%;
-      margin-top: 60px;
-      background-color: #F7C50A;
-      font-size: 23px;
-      color: #000;
-      font-weight: 700;
-      padding: 13px 81px;
-      border-radius: 12px;
-      animation-name: butt;
-      width: 308px;
-      animation-duration: 2s;
-      animation-iteration-count: initial; }
-      @media (min-width: 1199px) {
-        @keyframes butt {
-          0% {
-            opacity: 0;
-            width: 0%;
-            color: transparent; }
-          90% {
-            opacity: 1;
-            width: 6%; }
-          100% {
-            color: #000000; } } }
-      .experts__form__button:hover {
-        background-color: #FFFFFF;
-        border: 1px solid black; }
+          .hero__form--one .container-sm {
+            display: flex;
+            align-items: flex-end;
+            justify-content: flex-start; } }
+      .hero__form--one__text {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column; }
+        @media (min-width: 1199px) {
+          .hero__form--one__text {
+            display: flex;
+            align-items: flex-end;
+            justify-content: flex-start; } }
+        .hero__form--one__text h1 {
+          width: 100%;
+          font-size: 25px;
+          color: #F7C50A; }
+          @media (min-width: 1199px) {
+            .hero__form--one__text h1 {
+              font-size: 70px;
+              line-height: 56px; } }
+        .hero__form--one__text p {
+          font-size: 20px;
+          color: #FFFFFF;
+          padding-bottom: 60px;
+          padding-top: 10px; }
+          @media (min-width: 1199px) {
+            .hero__form--one__text p {
+              font-size: 40px;
+              line-height: 56px; } }
+        .hero__form--one__text__button {
+          background-color: #1B8233;
+          font-size: 14px;
+          color: #FFFFFF;
+          font-weight: normal;
+          padding: 15px;
+          width: auto;
+          /*Animation*/
+          animation-name: butt;
+          animation-duration: 2s;
+          animation-iteration-count: initial; }
+          @media (min-width: 1199px) {
+            .hero__form--one__text__button {
+              padding: 20px 40px; } }
+    .hero__form--two {
+      background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../../../img/Hotel.jpg");
+      background-position: center;
+      background-size: cover;
+      background-repeat: no-repeat; }
+      .hero__form--two .container-sm {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        padding: 200px 0; }
+        @media (min-width: 1199px) {
+          .hero__form--two .container-sm {
+            display: flex;
+            align-items: flex-start;
+            justify-content: flex-start; } }
+      .hero__form--two__text {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column; }
+        @media (min-width: 1199px) {
+          .hero__form--two__text {
+            display: flex;
+            align-items: flex-start;
+            justify-content: flex-start; } }
+        .hero__form--two__text h1 {
+          width: 100%;
+          font-size: 25px;
+          color: #F7C50A;
+          text-align: center; }
+          @media (min-width: 1199px) {
+            .hero__form--two__text h1 {
+              text-align: start;
+              font-size: 70px;
+              line-height: 56px; } }
+        .hero__form--two__text p {
+          font-size: 20px;
+          color: #FFFFFF;
+          padding-bottom: 60px;
+          padding-top: 10px;
+          text-align: center; }
+          @media (min-width: 1199px) {
+            .hero__form--two__text p {
+              text-align: start;
+              font-size: 40px;
+              line-height: 56px; } }
+        .hero__form--two__text__button {
+          background-color: #1B8233;
+          font-size: 14px;
+          color: #FFFFFF;
+          font-weight: normal;
+          padding: 15px;
+          width: auto;
+          /*Animation*/
+          animation-name: butt;
+          animation-duration: 2s;
+          animation-iteration-count: initial; }
+          @media (min-width: 1199px) {
+            .hero__form--two__text__button {
+              padding: 20px 40px; } }
 
 .swiper {
   width: 100%;
   height: 100%; }
   .swiper .swiper-slide {
     width: 100% !important;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* Center slide text vertically */
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    -webkit-justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    -webkit-align-items: center; }
+    height: 100%; }
   .swiper .swiper-pagination-bullet {
     background-color: #FFFFFF;
     opacity: 0.6; }
