--- a/scss/globals/_colors.scss
+++ b/scss/globals/_colors.scss
@@ -5,7 +5,7 @@ $white: #FFFFFF;
 
 $la_salle_green:#1B8233;
 $mikado_yellow:#F7C50A;
-$saffron_mango:#E1CB5E;
+$saffron_mango:#ffc600;
 $candlelight:#FFDA1F;
 $naples_yellow:#FBDB5B;
 $light_tan:#FBEBA3;
