--- a/scss/components/home/_hero.scss
+++ b/scss/components/home/_hero.scss
@@ -3,6 +3,7 @@
 	overflow: hidden;
 	position: relative;
 	height: 500px;
+    z-index: -2;
 
     @media(min-width: 1199px){
         height: 800px;
