--- a/css/main.css
+++ b/css/main.css
@@ -39,7 +39,7 @@
       max-width: 760px; } }
   @media (min-width: 1200px) {
     .container-sm {
-      max-width: 1200px; } }
+      max-width: 1050px; } }
   @media (min-width: 1400px) {
     .container-sm {
       max-width: 1280px; } }
@@ -412,7 +412,7 @@
           width: 100%;
           font-size: 25px;
           color: #F7C50A; }
-          @media (min-width: 1199px) {
+          @media (min-width: 992px) {
             .hero__form--one__text h1 {
               font-size: 70px;
               line-height: 56px; } }
@@ -421,7 +421,7 @@
           color: #FFFFFF;
           padding-bottom: 60px;
           padding-top: 10px; }
-          @media (min-width: 1199px) {
+          @media (min-width: 992px) {
             .hero__form--one__text p {
               font-size: 40px;
               line-height: 56px; } }
@@ -470,7 +470,7 @@
           font-size: 25px;
           color: #F7C50A;
           text-align: center; }
-          @media (min-width: 1199px) {
+          @media (min-width: 992px) {
             .hero__form--two__text h1 {
               text-align: start;
               font-size: 70px;
@@ -481,7 +481,7 @@
           padding-bottom: 60px;
           padding-top: 10px;
           text-align: center; }
-          @media (min-width: 1199px) {
+          @media (min-width: 992px) {
             .hero__form--two__text p {
               text-align: start;
               font-size: 40px;
@@ -516,27 +516,35 @@
 
 .reduce_costs {
   width: 100%;
-  position: absolute;
+  position: relative;
   background-color: #000000;
-  z-index: 99; }
+  z-index: 1; }
   .reduce_costs .container-sm {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    padding: 0 0 60px 0; }
+    padding: 0 0 60px 0;
+    padding: 0 15px; }
+    @media (min-width: 1199px) {
+      .reduce_costs .container-sm {
+        padding: 0 100px; } }
+    @media (min-width: 1399px) {
+      .reduce_costs .container-sm {
+        padding: 0 200px; } }
   .reduce_costs__grid {
-    width: 100%;
     position: relative;
+    bottom: 30px;
+    width: 100%;
     display: grid;
     grid-template-columns: repeat(1, 1fr);
-    gap: 70px;
-    bottom: 60px;
+    gap: 20px;
     z-index: 999999; }
-    @media (min-width: 1199px) {
+    @media (min-width: 992px) {
       .reduce_costs__grid {
+        bottom: 60px;
         grid-template-columns: repeat(3, 1fr);
-        padding: 0 200px; } }
+        gap: 70px; } }
     .reduce_costs__grid__item {
       width: 100%;
       background-color: #ffc600;
@@ -552,17 +560,28 @@
         font-size: 16px;
         font-weight: 700;
         text-align: center; }
-  .reduce_costs__text h1 {
-    font-size: 30px;
-    font-weight: 700;
-    text-align: center;
-    color: #ffc600; }
-  .reduce_costs__text p {
-    padding-top: 20px;
-    text-align: center;
-    font-size: 20px;
-    width: 100%;
-    color: #FFFFFF; }
+  .reduce_costs__text {
+    padding-bottom: 20px; }
+    @media (min-width: 992px) {
+      .reduce_costs__text {
+        padding-top: 0; } }
+    .reduce_costs__text h1 {
+      font-size: 20px;
+      font-weight: 700;
+      text-align: center;
+      color: #ffc600; }
+      @media (min-width: 992px) {
+        .reduce_costs__text h1 {
+          font-size: 30px; } }
+    .reduce_costs__text p {
+      padding-top: 15px;
+      text-align: center;
+      font-size: 20px;
+      width: 100%;
+      color: #FFFFFF; }
+      @media (min-width: 992px) {
+        .reduce_costs__text p {
+          font-size: 20px; } }
 
 * {
   margin: 0;
