--- a/scss/components/home/_reduces_costs.scss
+++ b/scss/components/home/_reduces_costs.scss
@@ -1,30 +1,39 @@
 .reduce_costs{
     width: 100%;
-	position: absolute;
+	position: relative;
     background-color: $black;
-    z-index: 99;
+    z-index: 1;
 
     .container-sm{
         @include flex-center-center;
         flex-direction: column;
         padding: 0 0 60px 0;
+        padding: 0 15px ;
+
+        @media(min-width:1199px){
+            padding: 0 100px;
+        }
+
+        @media(min-width:1399px){
+            padding: 0 200px;
+        }
 
     }
 
     &__grid{
-        width: 100%;
         position: relative;
+        bottom: 30px;
+        width: 100%;
         display: grid;
         grid-template-columns: repeat(1, 1fr);
-        gap: 70px;
-        bottom: 60px;
+        gap: 20px;
         z-index: 999999 ;
 
-        @media(min-width:1199px){
+        @media(min-width:992px){
+            bottom: 60px;
             grid-template-columns: repeat(3, 1fr);
-            padding: 0 200px;
+            gap: 70px;
         }
-
 
         &__item{
             width: 100%;
@@ -47,20 +56,33 @@
     }
 
     &__text{
+        padding-bottom: 20px;
+
+        @media(min-width:992px){
+            padding-top: 0;
+        }
 
         h1{
-            font-size: 30px;
+            font-size: 20px;
             font-weight: 700;
             text-align: center;
             color: $saffron_mango;
+
+            @media(min-width: 992px){
+                font-size: 30px;
+            }
         }
 
         p{
-            padding-top: 20px;
+            padding-top: 15px;
             text-align: center;
             font-size: 20px;
             width: 100%;
             color: $white;
+
+            @media(min-width: 992px){
+                font-size:20px;
+            }
         }
     }
 }
