--- a/css/main.css
+++ b/css/main.css
@@ -383,7 +383,7 @@
     width: 100%;
     height: 100%; }
     .hero__form--one {
-      background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../../../img/Banner.jpg");
+      background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../img/Banner.jpg");
       background-position: center;
       background-size: cover;
       background-repeat: no-repeat; }
@@ -440,7 +440,7 @@
             .hero__form--one__text__button {
               padding: 20px 40px; } }
     .hero__form--two {
-      background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../../../img/Hotel.jpg");
+      background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../img/Hotel.jpg");
       background-position: center;
       background-size: cover;
       background-repeat: no-repeat; }
@@ -587,7 +587,7 @@
   width: 100%;
   position: relative;
   overflow: hidden;
-  background-image: url("../../../img/para3.jpg");
+  background-image: url("../img/para3.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
