--- a/scss/components/home/_promotion.scss
+++ b/scss/components/home/_promotion.scss
@@ -2,7 +2,7 @@
     width: 100%;
 	position: relative;
     overflow: hidden;
-    background-image: url("../../../img/para3.jpg");
+    background-image: url("../img/para3.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
