--- a/scss/main.scss
+++ b/scss/main.scss
@@ -16,6 +16,9 @@
 @import 'components/home/hero';
 @import 'components/home/reduces_costs';
 @import 'components/home/promotion';
+@import 'components/home/win_win';
+@import 'components/home/our_products';
+@import 'components/home/sales';
 
 
 
