--- a/css/main.css
+++ b/css/main.css
@@ -712,6 +712,109 @@
       .win_win__imagen {
         bottom: 39px; } }
 
+.our_products {
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+  background-image: url("../img/fondo.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 100%; }
+  .our_products .container-sm {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    padding: 150px 0;
+    gap: 30px; }
+    @media (min-width: 768px) {
+      .our_products .container-sm {
+        grid-template-columns: repeat(2, 1fr); } }
+  .our_products__text {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column; }
+    .our_products__text h1 {
+      width: 50%;
+      text-align: center;
+      color: #fff;
+      font-size: 35px;
+      font-weight: 600; }
+    .our_products__text__button {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background-color: #F7C50A;
+      /*text*/
+      font-size: 20px;
+      font-weight: 800;
+      margin-top: 16px;
+      letter-spacing: 0.5px;
+      padding: 12px 23px;
+      text-transform: uppercase;
+      color: #FFFFFF;
+      margin-top: 62px; }
+  .our_products__carousel__decoration {
+    padding-top: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px; }
+    .our_products__carousel__decoration__controls {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 10px; }
+      .our_products__carousel__decoration__controls--prev {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 45px;
+        height: 45px;
+        border-radius: 50%;
+        z-index: 2;
+        border: 1px solid #FFFFFF; }
+        .our_products__carousel__decoration__controls--prev svg {
+          width: 30px;
+          fill: #FFFFFF;
+          padding: 5px; }
+      .our_products__carousel__decoration__controls--next {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 45px;
+        height: 45px;
+        border-radius: 50%;
+        z-index: 2;
+        border: 1px solid #FFFFFF; }
+        .our_products__carousel__decoration__controls--next svg {
+          width: 35px;
+          fill: #FFFFFF;
+          padding: 5px; }
+    .our_products__carousel__decoration hr {
+      width: 100%;
+      height: 1px; }
+  .our_products__carousel__imagen {
+    width: 100%;
+    height: 100%;
+    padding: 0 18px; }
+    .our_products__carousel__imagen img {
+      border-radius: 15px; }
+
+.swiper_products {
+  width: 100%;
+  height: 100%;
+  overflow: hidden; }
+  .swiper_products .swiper-slide {
+    width: 100% !important;
+    height: 100%; }
+    @media (min-width: 992px) {
+      .swiper_products .swiper-slide {
+        width: 50% !important; } }
+    @media (min-width: 1199px) {
+      .swiper_products .swiper-slide {
+        width: 33% !important; } }
+
 .sale {
   width: 100%;
   position: relative; }
