--- a/scss/components/home/_our_products.scss
+++ b/scss/components/home/_our_products.scss
@@ -1,3 +1,141 @@
 .our_products{
+    width: 100%;
+	position: relative;
+    overflow: hidden;
+    background-image: url("../img/fondo.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 100%;
+
+    .container-sm{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        padding: 150px 0;
+        gap: 30px;
+
+
+        @media(min-width: 768px){
+            grid-template-columns: repeat(2, 1fr);
+
+        }
+    }
+
+    &__text{
+        @include flex-center-center;
+        flex-direction: column;
+
+        h1{
+            width: 50%;
+            text-align: center;
+            color: #fff;
+            font-size: 35px;
+            font-weight: 600;
+        }
+
+        &__button{
+            @include flex-center-center;
+            background-color: $mikado_yellow;
+
+
+            /*text*/
+            font-size: 20px;
+            font-weight: 800;
+            margin-top: 16px;
+            letter-spacing: 0.5px;
+            padding: 12px 23px;
+            text-transform: uppercase;
+            color: $white;
+            margin-top: 62px;
+        }
+
+    }
+
+    &__carousel{
+        
+        &__decoration{
+            padding-top: 20px ;
+           @include flex-center-center;
+           gap: 20px;
+
+            &__controls{
+                @include flex-center-center;
+                gap: 10px;
     
+                &--prev{
+                    @include flex-center-center;
+                    width: 45px;
+                    height: 45px;
+                    border-radius: 50%;
+                    z-index: 2;
+                    border: 1px solid $white;
+            
+            
+                    svg{
+                        width: 30px;
+                        fill: $white;
+                        padding: 5px;
+                    }
+            
+                }
+            
+                &--next{
+                    @include flex-center-center;
+                    width: 45px;
+                    height: 45px;
+                    border-radius: 50%;
+                    z-index: 2;
+                    border: 1px solid $white;
+            
+            
+                    svg{
+                        width: 35px;
+                        fill: $white;
+                        padding: 5px;
+                    }
+            
+                }
+        
+            }
+
+            hr{
+                width: 100%;
+                height: 1px;
+            }
+
+        }
+
+        &__imagen{
+            width: 100%;
+            height: 100%;
+            padding: 0 18px;
+
+            img{
+                border-radius: 15px;
+            }
+
+        }
+
+    }
+}
+
+.swiper_products{
+	width: 100%;
+	height: 100%;
+    overflow: hidden;
+
+		.swiper-slide{
+			width: 100% !important;
+			height: 100%;
+
+            @media(min-width:992px ){
+                width: 50% !important;
+            }
+
+            @media(min-width:1199px ){
+                width: 33% !important;
+            }
+
+		}
+
 }
