--- a/css/main.css
+++ b/css/main.css
@@ -724,36 +724,45 @@
   .our_products .container-sm {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
-    padding: 150px 0;
+    padding: 90px 0;
     gap: 30px; }
     @media (min-width: 768px) {
       .our_products .container-sm {
-        grid-template-columns: repeat(2, 1fr); } }
+        grid-template-columns: repeat(2, 1fr);
+        padding: 150px 0; } }
   .our_products__text {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column; }
     .our_products__text h1 {
-      width: 50%;
+      width: 100%;
       text-align: center;
       color: #fff;
-      font-size: 35px;
+      font-size: 25px;
       font-weight: 600; }
+      @media (min-width: 768px) {
+        .our_products__text h1 {
+          width: 50%;
+          font-size: 35px; } }
     .our_products__text__button {
       display: flex;
       align-items: center;
       justify-content: center;
       background-color: #F7C50A;
       /*text*/
-      font-size: 20px;
+      font-size: 14px;
       font-weight: 800;
       margin-top: 16px;
       letter-spacing: 0.5px;
       padding: 12px 23px;
       text-transform: uppercase;
       color: #FFFFFF;
-      margin-top: 62px; }
+      margin-top: 30px; }
+      @media (min-width: 768px) {
+        .our_products__text__button {
+          font-size: 20px;
+          margin-top: 62px; } }
   .our_products__carousel__decoration {
     padding-top: 20px;
     display: flex;
@@ -808,9 +817,6 @@
   .swiper_products .swiper-slide {
     width: 100% !important;
     height: 100%; }
-    @media (min-width: 992px) {
-      .swiper_products .swiper-slide {
-        width: 50% !important; } }
     @media (min-width: 1199px) {
       .swiper_products .swiper-slide {
         width: 33% !important; } }
@@ -825,7 +831,7 @@
     gap: 40px; }
     @media (min-width: 1199px) {
       .sale .container-sm {
-        padding: 64px 0;
+        padding: 0;
         grid-template-columns: repeat(2, 1fr); } }
   .sale__imagen {
     width: 100%;
@@ -834,18 +840,21 @@
     @media (min-width: 1199px) {
       .sale__imagen {
         position: relative;
-        bottom: 48px; } }
+        bottom: 15px; } }
     @media (min-width: 1399px) {
       .sale__imagen {
-        bottom: 36px; } }
+        bottom: 18px; } }
     @media (min-width: 1677px) {
       .sale__imagen {
-        bottom: 39px; } }
+        bottom: 22px; } }
   .sale__text {
     display: flex;
     align-items: center;
     justify-content: flex-start;
     flex-direction: column; }
+    @media (min-width: 1199px) {
+      .sale__text {
+        padding-top: 64px; } }
     .sale__text h1 {
       color: #1b8233;
       text-align: center;
