--- a/scss/components/home/_promotion.scss
+++ b/scss/components/home/_promotion.scss
@@ -2,7 +2,7 @@
     width: 100%;
 	position: relative;
     overflow: hidden;
-    background-image: url("../img/para3.jpg");
+    background-image:linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.9)), url("../img/para3.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -11,8 +11,9 @@
 
     .container-sm{
         height: 100%;
-        @include flex-center-center;
+        @include flex-center-end;
         flex-direction: column;
+        padding: 60px 0;
     }
 
     h1{
@@ -28,15 +29,40 @@
     }
 
     p{
+        width: 100%;
         opacity: 0.8;
-        margin: 2em 0;
         color: white;
         text-shadow: 2px 2px 5px black;
         text-align: center;
         font-size:15px ;
+        margin-top: 20px;
 
         @media(min-width:768px){
+            width: 50%;
             font-size:16px ;
+        }
+    }
+
+    &__button{
+        @include flex-center-center;
+        background-color: $mikado_yellow;
+
+        /*text*/
+        font-size: 14px;
+        font-weight: 800;
+        margin-top: 16px;
+        letter-spacing: 0.5px;
+        padding: 12px 23px;
+        color: $white;
+
+        @media(min-width:768px){
+            font-size: 20px;
+        }
+
+        &:hover{
+            color: $white;
+            background-color:$black ;
+            border: 1px solid $mikado_yellow;
         }
     }
     
