--- a/scss/main.scss
+++ b/scss/main.scss
@@ -17,6 +17,7 @@
 @import 'components/home/reduces_costs';
 @import 'components/home/promotion';
 @import 'components/home/win_win';
+@import 'components/home/idea';
 @import 'components/home/our_products';
 @import 'components/home/sales';
 
