--- a/scss/components/home/_idea.scss
+++ b/scss/components/home/_idea.scss
@@ -2,20 +2,21 @@
     width: 100%;
 	position: relative;
     overflow: hidden;
-    background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)),url('../img/paneles.png');
+    background-color:$black;
+    /*background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)),url('../img/paneles.jpg');
     background-position: center;
     background-size: cover;
-    background-repeat: no-repeat;
-    height: 300px;
+    background-repeat: no-repeat;*/
+    height: 100%;
 
     @media(min-width: 1199px){
-       background-image: none;
+       background-color: $white;
        height: 100%;
     }
 
     .container-sm{
         @include flex-center-center;
-        gap: 10px;
+        gap: 15px;
         padding: 15px 0;
 
         @media(min-width: 1199px){
@@ -38,14 +39,24 @@
         flex-direction: column;
         
         h1{
+            font-size: 25px;
             color: $mikado_yellow;
             text-align: center;
             padding-bottom: 15px;
+
+            @media(min-width: 1199px){
+                font-size: 30px;
+            }
         }
 
         p{
+            font-size: 15px;
             color: $mikado_yellow;
             text-align: center;
+
+            @media(min-width: 1199px){
+                font-size: 17px;
+            }
         }
     }
 }
